--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,7 +1,13 @@
 apply plugin: 'java-library'
 
 dependencies {
+    compile project(path: ':domain')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0-RC0'
+    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+    implementation 'com.google.dagger:dagger-android:2.20'
 }
 
 sourceCompatibility = "7"
