--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0-RC0'
 }
 
 sourceCompatibility = "7"
