--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -15,11 +16,18 @@ buildscript {
     }
 }
 
+ext{
+    compileSdkVersion = 28
+    minSdkVersion = 15
+    targetSdkVersion = 28
+}
+
+
 allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
 
