--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'java-library'
+apply plugin: 'kotlin'
+targetCompatibility = 1.8
+sourceCompatibility = 1.8
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.0-RC0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'com.google.dagger:dagger-android:2.20'
 }
-
-sourceCompatibility = "7"
-targetCompatibility = "7"
