--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -12,6 +12,8 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "SERVER_URL", "\"https://api.github.com/\""
+
     }
     buildTypes {
         release {
@@ -36,5 +38,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.dagger:dagger-android:2.20'
+    implementation "com.squareup.retrofit2:retrofit:2.4.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.4.0"
     kapt 'com.google.dagger:dagger-compiler:2.20'
 }
