--- a/data/build.gradle
+++ b/data/build.gradle
@@ -10,5 +10,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
     implementation 'com.google.dagger:dagger-android:2.20'
 }
