--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
     kapt 'com.google.dagger:dagger-compiler:2.20'
 }
