--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -35,9 +35,6 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.dagger:dagger-android:2.20'
     implementation "com.squareup.retrofit2:retrofit:2.4.0"
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
@@ -45,4 +42,11 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
     kapt 'com.google.dagger:dagger-compiler:2.20'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "android.arch.core:core-testing:1.0.0"
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation "android.arch.core:core-testing:1.0.0"
 }
